# smart-code-select

./: README.md  pyproject.toml
app/examples/: basic_tools_server.py  test_selector.py
app/smart_tool_select/: __init__.py  core.py  embedders.py  indexes.py  registry.py
scripts/: vendor_model.py
